<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Proiect_Licenta_Client</string>
    <string name="gol"></string>
    <string name="action_settings">Settings</string>
    <string name="Login">Login</string>
    <string name="SignUp">SignUp</string>
    <string name="numeUtilizator">Nume Utilizator</string>
    <string name="Parola">Parola</string>
    <string name="confirmareParola">Confirmare Parola</string>
    <string name="addMessage">Add Message</string>
    <string name="Profil">Profil</string>
    <string name="Welcome">Welcome</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Cauta</string>
    <string name="Comenteaza">Comenteaza</string>
    <string name="username">username</string>
    <string name="friendList">Friend List</string>
    <string name="Decline_Friend_Request">Decline</string>
    <string name="Remove">Remove</string>
    <string name="Accept_Friend_Request">Accept</string>
    <string name="Add_Friend">Add Friend</string>
    <string name="mesaje">Mesaje</string>
    <string name="poza">Poza</string>
    <string name="Interese">Interese</string>
    <string name="Arhiva">Arhiva</string>
    <string name="NuExistaFriendRecommendetion">Nu ai recomandari de prieteni</string>


    <color name="blue">#A1CAF1</color>
    <color name="white">#FEFEFA</color>
    <color name="black">#000000</color>
    <color name="red">#FF0800</color>
<color name="grey">#B2BEB5</color>
    <color name="light_grey">#e6e6e6</color>
</resources>