<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/paginaPricipalaPrietenTemporarMesajInceput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/paginaPricipalaPrietenTemporarContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:visibility="gone">



        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"

            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/paginaPricipalaPrietenTemporarPozaProfil"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="0dp"
                    android:background="@color/grey"
                    android:contentDescription="@string/poza"
                    android:padding="0dp"
                    android:visibility="gone">

                </ImageView>

                <TextView
                    android:id="@+id/paginaPricipalaPrietenTemporarNume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="9sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/paginaPricipalaPrietenTemporarMesaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mesaje" />

                <Button
                    android:id="@+id/paginaPricipalaPrietenTemporarRemovePrieten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Elimina" />

            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:id="@+id/paginaPricipalaPrietenTemporarInteresInComun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/paginaPricipalaPrietenTemporarArhiva"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Arhiva" />
    <Button
        android:id="@+id/paginaPricipalaPrietenTemporarClasament"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"

        android:text="Clasament" />

</LinearLayout>
</ScrollView>